Fix regression issue related to dependency source debugging